Updated ui for listing of orders

--- a/app/src/main/res/layout/list_item_order.xml
+++ b/app/src/main/res/layout/list_item_order.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -178,5 +179,224 @@
             app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
+-->
+
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/article_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="20dp"
+    android:elevation="6dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/list_item_order_image_roundedcornerimageview"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo_blue"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.100000024" />
+
+        <TextView
+            android:id="@+id/list_item_order_statusshort_textview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="11dp"
+            android:text="ORDER #1972972972 "
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_image_roundedcornerimageview"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/list_item_order_statuslong_textview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="50dp"
+            android:text="Your order has been assigned to biker with number 0244778999"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_image_roundedcornerimageview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_statusshort_textview" />
+
+        <!--Progress Bar created-->
+        <com.kofigyan.stateprogressbar.StateProgressBar
+            android:id="@+id/your_state_progress_bar_id"
+            android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:spb_stateSize="13dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_statuslong_textview"
+            app:spb_animateToCurrentProgressState="true"
+            app:spb_checkStateCompleted="true"
+            app:spb_currentStateDescriptionColor="@color/color_memaww_blue"
+            app:spb_currentStateNumber="one"
+            app:spb_maxStateNumber="four"
+            app:spb_stateBackgroundColor="@color/color_gray_light_v1"
+            app:spb_stateDescriptionColor="@color/color_memaww_blue"
+            app:spb_stateForegroundColor="@color/color_memaww_blue"
+            app:spb_stateNumberBackgroundColor="@color/color_gray_light_v1"
+            app:spb_stateNumberForegroundColor="@color/color_memaww_blue" />
+
+        <ImageView
+            android:id="@+id/list_item_order_orderdate_imageview"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ordertime"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderdatelabel_textview"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/list_item_order_statuslong_textview"
+            app:layout_constraintTop_toBottomOf="@+id/your_state_progress_bar_id" />
+
+        <TextView
+            android:id="@+id/list_item_order_orderdatelabel_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:text="Ordered"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderdatevalue_textview"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderdate_imageview"
+            app:layout_constraintTop_toBottomOf="@+id/your_state_progress_bar_id" />
+
+
+        <TextView
+            android:id="@+id/list_item_order_orderdatevalue_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:text="May 17, 8pm"
+            android:textColor="@color/color_gray"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderdatelabel_textview"
+            app:layout_constraintTop_toBottomOf="@+id/your_state_progress_bar_id" />
+
+
+
+        <ImageView
+            android:id="@+id/list_item_order_orderdelivery_imageview"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/deliverytime"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderdeliverylabel_textview"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/list_item_order_statuslong_textview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdate_imageview" />
+
+        <TextView
+            android:id="@+id/list_item_order_orderdeliverylabel_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="13dp"
+            android:textStyle="bold"
+            android:text="Delivery"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderdeliveryvalue_textview"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderdelivery_imageview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdate_imageview" />
+
+
+        <TextView
+            android:id="@+id/list_item_order_orderdeliveryvalue_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="13dp"
+            android:text="Pending"
+            android:textColor="@color/color_gray"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderdeliverylabel_textview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdate_imageview" />
+
+
+        <ImageView
+            android:id="@+id/list_item_order_orderitems_imageview"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cloth"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderitemslabel_textview"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/list_item_order_statuslong_textview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdelivery_imageview" />
+
+        <TextView
+            android:id="@+id/list_item_order_orderitemslabel_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="8dp"
+            android:textStyle="bold"
+            android:text="Items"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_orderitemsvalue_textview"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderitems_imageview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdelivery_imageview" />
+
+
+        <TextView
+            android:id="@+id/list_item_order_orderitemsvalue_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="8dp"
+            android:text="x 15"
+            android:textColor="@color/color_gray"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_item_order_orderitemslabel_textview"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_order_orderdelivery_imageview" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.cardview.widget.CardView>
