--- a/app/src/main/res/layout/fragment_collection_form.xml
+++ b/app/src/main/res/layout/fragment_collection_form.xml
@@ -165,6 +165,20 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <ImageView
+            android:id="@+id/list_item_order_image_roundedcornerimageview"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/map"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocdatetime_layout_holder" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fragment_collectionform_pickuplocation_edittext_layout_holder"
@@ -172,7 +186,7 @@
             android:layout_height="wrap_content"
             android:theme="@style/fragmentFormHintStyle"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:layout_constraintEnd_toStartOf="@+id/fragment_collectionform_guideline_v2"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_order_image_roundedcornerimageview"
             app:layout_constraintStart_toEndOf="@+id/fragment_collectionform_guideline_v1"
             app:layout_constraintTop_toBottomOf="@+id/fragment_collectionform_pickuplocdatetime_layout_holder">
 
@@ -188,6 +202,7 @@
                 android:textColor="@drawable/login_activity_input_text_color" />
 
 
+            <!--
             <TextView
                 android:id="@+id/fragment_collectionform_usegps_textview"
                 android:layout_width="wrap_content"
@@ -197,6 +212,7 @@
                 android:text="Use current location"
                 android:textColor="@color/color_gray"
                 android:textSize="16sp"/>
+             -->
 
 
         </com.google.android.material.textfield.TextInputLayout>
