--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:text="Subtotal"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:layout_marginStart="20dp"
             app:layout_constraintEnd_toStartOf="@+id/fragment_confirmorder_subtotalvalue_textview"
@@ -148,7 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:text="$13"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_marginEnd="20dp"
@@ -165,7 +165,7 @@
             android:layout_marginStart="20dp"
             android:text="Discount"
             android:layout_marginTop="25dp"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/fragment_confirmorder_discounttotalvalue_textview"
             app:layout_constraintHorizontal_bias="0.0"
@@ -180,7 +180,7 @@
             android:layout_marginEnd="20dp"
             android:text="$13"
             android:layout_marginTop="25dp"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +196,7 @@
             android:layout_marginStart="20dp"
             android:text="Final"
             android:layout_marginTop="25dp"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/fragment_confirmorder_finaltotalvalue_textview"
             app:layout_constraintHorizontal_bias="0.0"
@@ -211,7 +211,7 @@
             android:layout_marginEnd="20dp"
             android:text="$13"
             android:layout_marginTop="25dp"
-            android:textColor="@color/color_gray"
+            android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
