--- a/app/src/main/res/layout/activity_order_collection.xml
+++ b/app/src/main/res/layout/activity_order_collection.xml
@@ -799,15 +799,15 @@
                             <ImageView
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                android:layout_marginTop="17dp"
-                                android:layout_marginBottom="13dp"
                                 android:layout_marginStart="14dp"
+                                android:layout_marginTop="17dp"
                                 android:layout_marginEnd="13dp"
-                                android:src="@drawable/discount_arrow_down" />
+                                android:layout_marginBottom="13dp"
+                                android:src="@drawable/discount_arrow_down"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -818,8 +818,8 @@
                         android:id="@+id/activity_ordercollection_formitemsholderscrollview_discountcollectionlabel_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:layout_marginTop="10dp"
                         android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
                         android:text="Add Discount Code?"
                         android:textColor="@color/black"
                         android:textSize="18sp"
@@ -833,13 +833,13 @@
                         android:id="@+id/activity_ordercollection_discountdate_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
                         android:text="Use a discount code to save on this order"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
-                        android:layout_marginStart="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_discounticonholder_constraintlayout"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_discountcollectionlabel_textview" />
 
 
@@ -852,8 +852,9 @@
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_discountediticon_imageview"
                         app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_discounticonholder_constraintlayout"
                         app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_discountdate_textview"
                         app:layout_constraintVertical_bias="0.0" />
@@ -863,6 +864,7 @@
                         android:id="@+id/activity_ordercollection_discountediticon_imageview"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
+                        android:layout_marginEnd="10dp"
                         android:src="@drawable/edit_pencil"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -908,18 +910,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@color/color_blue_light">
+
                             <ImageView
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                android:layout_marginTop="15dp"
-                                android:layout_marginBottom="15dp"
                                 android:layout_marginStart="13dp"
+                                android:layout_marginTop="15dp"
                                 android:layout_marginEnd="17dp"
-                                android:src="@drawable/note" />
+                                android:layout_marginBottom="15dp"
+                                android:src="@drawable/note"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -931,8 +934,8 @@
                         android:id="@+id/activity_ordercollection_formitemsholderscrollview_specialnotescollectionlabel_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:layout_marginTop="10dp"
                         android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
                         android:text="Special Notes"
                         android:textColor="@color/black"
                         android:textSize="18sp"
@@ -946,13 +949,13 @@
                         android:id="@+id/activity_ordercollection_specialnotesdate_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
                         android:text="Let us know if you have special instructions"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
-                        android:layout_marginStart="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_specialnotesiconholder_constraintlayout"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_specialnotescollectionlabel_textview" />
 
 
@@ -966,8 +969,9 @@
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_specialnotesediticon_imageview"
                         app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintHorizontal_chainStyle="spread"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_specialnotesiconholder_constraintlayout"
                         app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_specialnotesdate_textview"
                         app:layout_constraintVertical_bias="0.0" />
@@ -978,6 +982,7 @@
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:src="@drawable/edit_pencil"
+                        android:layout_marginEnd="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
